Issue of header not showing and made complete website mobile responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,11 @@ h1 a img {
 .markdown-body{
 position: relative;
 padding: 40px;
-margin-left: 250px;
+}
+.hacktoberfest-header{
+  text-align: center;
+  width: auto;
+  margin: auto !important;
 }
 .markdown-header {
   box-sizing: border-box;
@@ -83,10 +87,9 @@ h4{
 }
 
 #register{
-float: center;
-margin-left: 600px;
 font-family: 'Anton', sans-serif;
-
+margin: auto;
+text-align: center;
 }
 #register .btn{
   font-size: 29px;
@@ -139,4 +142,15 @@ a {
     flex: 0 0 100%;
     margin: 10px 0;
   }
+}    
+@media (min-width: 740px) {
+  .hacktoberfest-header {
+    width: fit-content;
+  }
 }
+
+@media (max-width: 320px) {
+  .markdown-body {
+    padding: 20px;
+  }
+} 
